<resources>
    <string name="app_name">AudioToDoList</string>
    <string name="settings">Settings</string>
    <string name="addTag">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="start_recording">Start recording</string>
    <string name="general_menu">General</string>
    <string name="all_notes">All notes</string>
    <string name="custom_folders">Folders</string>
    <string name="content_menu">Content</string>
    <string name="new_folder">New folder</string>
    <string name="search">Search</string>
    <string name="folder_fragment_toolbar_title">Custom folders</string>
    <string name="folder_name_prompt">Insert folder name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="required_error">Required</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_msg">Are you sure you want to delete the folder? All notes inside the folder will be deleted too</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_folder">Delete folder</string>
    <string name="tags">Tags</string>
    <string name="comments">Comments</string>
    <string name="confirm">Confirm</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="delete_note">Delete memo</string>
    <string name="delete_memo_confirm">Delete this memo?</string>
    <string name="file_not_found">Warning: file not found</string>
    <string name="file_not_found_body">This file seems to be missing or could not be found. Delete this memo?</string>
    <string name="file_deleted_toast">Memo deleted</string>
    <string name="add_tags_title">Add tags</string>
    <string name="add_tags_body">Add one or more tags separated by a comma</string>
    <string name="tag_prompt">Tag1,Tag2,...</string>
    <string name="filter_menu">Filter</string>
    <string name="filter_dialog_title">Filter by tag</string>
    <string name="night_mode">Night mode</string>
    <string name="pref_night_mode">night_mode</string>
</resources>